# gopro-linux

./: .gitignore  README.md  pyproject.toml
src/gopro_linux/: cli.py  ffmpeg.py
src/gopro_linux/gpmf/: __init__.py  parser.py
src/gopro_linux/overlay/: __init__.py  renderer.py
src/gopro_linux/overlay/widgets/: __init__.py  base.py  gforce.py  speed.py  speed_graph.py  track.py
src/gopro_linux/telemetry/: __init__.py  correction.py  models.py
